test commit and push

--- a/templates/home.html
+++ b/templates/home.html
@@ -4,4 +4,6 @@
 <h1>Homepage</h1>
 
 <p>Welcome to the homepage of this website. There is nothing here yet.</p>
+
+<p>This is another paragraph.</p>
 {% endblock content %}
