more .ipynb checkpoint cleaning

--- a/templates/coding.html
+++ b/templates/coding.html
@@ -17,10 +17,10 @@
         <li><a href="https://exercism.org">exercism</a></li>
     </ul>
 
-<h2>HTML</h2>
 
-<h2>CSS</h2>
+<h2>HTML/CSS</h2>
 <ul>
+    <li><a href="http://codepen.io">Codepen.io</a></li>
     <li><a href="https://developer.mozilla.org/en-US/docs/Web/CSS/Layout_cookbook">MDN CSS Cookbook</a></li>
     <li>CSS Variants &amp; Preprocessors
         <ul>
