redid home page

--- a/templates/coding.html
+++ b/templates/coding.html
@@ -42,7 +42,8 @@
     <li><cite>JavaScript: The Definitive Guide</cite> by David Flanagan
     <li><a href="https://fullstackopen.com/en/">Full Stack Open</a></li>
     <blockquote>Learn React, Redux, Node.js, MongoDB, GraphQL and TypeScript in one go! This course will introduce you to modern JavaScript-based web development. The main focus is on building single page applications with ReactJS that use REST APIs built with Node.js.</blockquote>
-    <li>JavaScript modules        
+    <li><a href="https://reactjs.org/docs/hooks-state.html#recap">React Hooks for state</a></li>
+    <li>JavaScript modules
         <ul>
             <li><a href="https://www.mathjax.org/">MathJax</a> &ndash; LaTeX rendered via Javascript</li>
             <blockquote>MathJax is highly modular on input and output. Use MathML, TeX, and ASCIImath as input and produce HTML+CSS, SVG, or MathML as output.</blockquote>
@@ -51,6 +52,18 @@
             <li><a href="https://revealjs.com/">Reveal.js</a> &ndash; converts docs/ppts to html presentations w a few transition elements</li>
             <li><a href="https://p5js.org/learn/">p5.js</a> &ndash; great animation library (related to Processing?)</li>
         </ul>
+</ul>
+
+<h3>React.js & related libraries</h3>
+<ul>
+    <li><a href="https://reactjs.org">React.js official website with Documentation and Tutorials</a>
+        <ul>
+            <a href="https://reactjs.org/tutorial/tutorial.html#overview">React concepts: overview</a>
+        </ul>
+    </li>
+    <li><a href="https://redux.js.org/">Redux.js - for managing state</a></li>
+    <li><a href="https://react-redux.js.org/">React-Redux - the official way to get React.js and Redux.js to play nice with each other</a></li>
+    <li>Learning React by Alex Banks and Eve Porcello</li>
 </ul>
 
 <h2>Python</h2>
