--- a/templates/home.html
+++ b/templates/home.html
@@ -4,6 +4,7 @@
 
 <head>
     <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Cameron Sweeney</title>
     <link href="{% static 'home.css' %}" rel="stylesheet" type="text/css" />
     
@@ -23,6 +24,9 @@
     <p>Welcome to my website! My name is Cameron Sweeney, and I'm a full stack developer and educator based in New York City.</p>
     <p>Website currently under construction... Check back soon!</p>
   </div>
+
+  <p></p>
+  <p></p>
 
   <div id="links">
     <div><div><a><span>about&nbsp;me</span></a></div></div>
