--- a/templates/home.html
+++ b/templates/home.html
@@ -11,47 +11,28 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@700&display=swap" rel="stylesheet"> 
-    <link href="https://fonts.googleapis.com/css2?family=Anek+Latin&display=swap" rel="stylesheet"> 
+    <link href="https://fonts.googleapis.com/css2?family=Anek+Latin&family=Barlow+Semi+Condensed&display=swap" rel="stylesheet"> 
 </head>
 
 <body>
 <article>
-
 <h1>hello, i'm cameron.</h1>
 
 <div id="intro">
   <div id="welcome">
-    <p>Welcome to my website! My name is Cameron Sweeney, and I'm a full stack developer and educator based in New York City.</p>
-    <p>Website currently under construction... Check back soon!</p>
+    <div>
+      <p>Welcome to my website! My name is Cameron Sweeney, and I'm a full stack developer and educator based in New York City.</p>
+      <p>I build websites and apps with Python, JavaScript, and more. I also tutor math, test prep, language, and science.</p>
+      <p>Website currently under construction... Check back soon!</p>
+    </div>
   </div>
-
-  <p></p>
-  <p></p>
 
   <div id="links">
-    <div><div><a><span>about&nbsp;me</span></a></div></div>
-    <div><div><a><span>portfolio</span></a></div></div>
-    <div><div><a><span>study&nbsp;guides</span></a></div></div>
-    <div><div><a><span>contact&nbsp;me</span></a></div></div>
+    <div><img src="{% static 'cameron.jpg' %}" /></div>
+    <div><div><a href="/learn"><span>student login</span></a></div></div>
   </div>
 </div>
-
-<!-- <img src="{% static 'cameron.jpg' %}" alt="headshot of Cameron Sweeney" />
-
-<h2 id="about">about</h2>
-
-<p>After teaching myself HTML, CSS, and JavaScript in middle school... Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam et facilisis ligula. Nam auctor tincidunt diam a convallis. Morbi ornare imperdiet eros. Integer vel nulla eros. Morbi sem urna, faucibus quis diam eget, rutrum maximus felis. Suspendisse feugiat sapien at libero lobortis, ut maximus mauris tempus. Sed mattis et purus id iaculis. </p>
-
-<div>
-    <div>HTML</div>
-    <div>CSS</div>
-    <div>JavaScript</div>
-    <div>Python</div>
-</div>
-
--->
 
 </article>
 </body>
-
 </html>
